# glongge

./: .gitignore  CLAUDE.md  COVERAGE_REPORT.md  Cargo.toml  PLAN-audio-device-detection.md  PLAN-buffer-reallocation.md  README.md  build.rs
.cargo/: config.toml
claude/: bincode_coverage.md
claude/logs/: 2025-12-28.md  2026-01-09.md  2026-01-10.md
glongge-derive/: Cargo.toml
glongge-derive/src/: lib.rs
src/: assert.rs  lib.rs  linalg.rs  main.rs  rectangle.rs  triangle.rs  util.rs  vk_core.rs
src/core/: assert.rs  builtin.rs  collision.rs  colour.rs  config.rs  coroutine.rs  input.rs  linalg.rs  mod.rs  prelude.rs  render.rs  scene.rs  util.rs  vk.rs  vk_core.rs
src/core/tulivuori/: buffer.rs  mod.rs  pipeline.rs  shader.rs  swapchain.rs  texture.rs  tv_mem.rs
src/core/update/: builtin.rs  collision.rs  debug_gui.rs  mod.rs
src/core/util/: assert.rs  canvas.rs  collision.rs  colour.rs  linalg.rs  mod.rs
src/core/vk/: mod.rs  vk_ctx.rs
src/examples/: concave.rs  mod.rs  rectangle.rs  spline.rs  triangle.rs
src/examples/mario/: floor.rs  mod.rs  player.rs  text_display.rs  underground_floor.rs
src/examples/mario/background/: castle.rs  hill1.rs  hill2.rs  hill3.rs  hill4.rs  mod.rs
src/examples/mario/block/: brick.rs  decorative_pipe.rs  flagpole.rs  mod.rs  pipe.rs  plain_block.rs  question_block.rs  underground_brick.rs
src/examples/mario/enemy/: goomba.rs  mod.rs
src/gg/: core.rs  coroutine.rs  mod.rs  render.rs  sample.rs
src/gg/scene/: mod.rs
src/gg/scene/sample/: mod.rs  rectangle.rs  triangle.rs
src/gg/scene/sample/mario/: brick.rs  floor.rs  goomba.rs  mod.rs  player.rs  question_block.rs  underground_floor.rs
src/gg/scene/sample/mario/background/: castle.rs  hill1.rs  hill2.rs  hill3.rs  hill4.rs  mod.rs
src/gg/scene/sample/mario/block/: block.rs  brick.rs  decorative_pipe.rs  flagpole.rs  mod.rs  pipe.rs  question_block.rs  underground_brick.rs
src/gg/scene/sample/mario/enemy/: goomba.rs  mod.rs
src/gui/: command.rs  debug_gui.rs  mod.rs  render.rs  window.rs
src/gui/render/: mod.rs  shader.rs  window.rs
src/mario/: floor.rs  mod.rs  player.rs  text_display.rs  underground_floor.rs
src/mario/background/: castle.rs  hill1.rs  hill2.rs  hill3.rs  hill4.rs  mod.rs
src/mario/block/: brick.rs  decorative_pipe.rs  flagpole.rs  mod.rs  pipe.rs  plain_block.rs  question_block.rs  underground_brick.rs
src/mario/enemy/: goomba.rs  mod.rs
src/resource/: font.rs  mod.rs  rich_text.rs  sound.rs  sprite.rs  texture.rs
src/scene/: mod.rs  sample.rs
src/scene/sample/: rectangle.rs  triangle.rs
src/shader/: mod.rs  sample.rs  vertex.rs
src/shader/glsl/: basic.rs  frag.spv  gui-frag.spv  gui-vert.spv  gui.frag  gui.vert  mod.rs  sprite-frag.spv  sprite-vert.spv  sprite.frag  sprite.rs  sprite.vert  vert.spv  wireframe.rs
src/util/: assert.rs  canvas.rs  collision.rs  collision_defs.rs  colour.rs  linalg.rs  linalg_def.rs  log.rs  mod.rs  spline.rs  tileset.rs
