[package]
name = "glongge"
version = "0.1.0"
edition = "2024"

[lib]
name = "glongge"
path = "src/lib.rs"

[dependencies]
glongge-derive = { path = "glongge-derive" }
# core
itertools = "0.14.0"
num-traits = "0.2.19"
rand = "0.9.1"
# utilities
anyhow = "1.0.100"
bincode = "2.0.1"
regex = "1.12.2"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tracing = { version = "0.1.41", features = [] }
tracing-subscriber = { version = "0.3.20", features = ["time"] }
# vulkan
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
vulkano-taskgraph = "0.35.1"
# windowing
egui = "0.31.1"
egui-winit = "0.31.1"
# media
ab_glyph = "0.2.32"
asefile = "0.3.8"
fyrox-sound = { git = "https://github.com/eleanor-em/Fyrox-sound-only" } # forked from 0.35.0
png = "0.17.16"

[profile.dev]
opt-level = 1

[profile.dev.package.vulkano]
opt-level = 3

[profile.dev.package.asefile]
opt-level = 3

[profile.dev.package.fyrox-sound]
opt-level = 3
