[package]
name = "glongge"
version = "0.1.0"
edition = "2024"

[lib]
name = "glongge"
path = "src/lib.rs"

[dependencies]
glongge-derive = { path = "glongge-derive" }
# core
itertools = "0.14.0"
num-traits = { version = "0.2.19", default-features = false }
rand = "0.9.1"
# utilities
anyhow = "1.0.100"
bincode = "2.0.1"
# logging
regex-lite = "0.1.8"
time = { version = "0.3.44", default-features = false, features = ["formatting", "macros"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "fmt", "time"] }
# vulkan
ash = { version = "0.38.0", default-features = false, features = ["linked", "debug", "std"] }
ash-window = "0.13.0"
vk-mem = "0.5.0"
# windowing
egui = "0.33.0"
egui-winit = { version = "0.33.0", default-features = false, features = ["clipboard", "wayland", "x11"] }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] } # match egui-winit
# media
ab_glyph = {version = "0.2.32", default-features = false }
asefile = { git = "https://github.com/eleanor-em/gg-asefile", default-features = false } # forked from 0.3.8
fyrox-sound = { git = "https://github.com/eleanor-em/Fyrox-sound-only" } # forked from 0.35.0
image = { version = "0.25.8", default-features = false, features = ["png"] } # match egui-winit
[profile.dev]
opt-level = 1

[profile.dev.package.asefile]
opt-level = 3

[profile.dev.package.fyrox-sound]
opt-level = 3
